--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Closed_Envelope_Clipart.svg" alt="Golden Envelope" class="envelope" onclick="openEnvelope()">
+        <img src="https://raw.githubusercontent.com/808Est/valentine-invite/refs/heads/main/DALL·E%202025-02-11%2008.44.37%20-%20A%20realistic%20golden%20envelope%20with%20a%20slightly%20open%20flap%2C%20revealing%20a%20hint%20of%20a%20letter%20inside.%20The%20envelope%20has%20a%20luxurious%2C%20metallic%20gold%20texture%20with%20s.webp" alt="Golden Envelope" class="envelope" onclick="openEnvelope()">
         <div class="message" id="message">Baby, would you be my Valentine? ❤️</div>
         <a href="#" class="gift-card" id="gift-card" target="_blank">Click here for your gift card 💳</a>
     </div>
