--- a/index.html
+++ b/index.html
@@ -24,16 +24,27 @@
         }
         .envelope-container {
             position: relative;
-            width: 200px;
-            height: 140px;
+            width: 250px;
+            height: 180px;
             cursor: pointer;
+            perspective: 1000px;
         }
         .envelope {
             position: absolute;
             width: 100%;
             height: 100%;
-            background: gold;
+            background: white;
             border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-style: italic;
+            font-size: 18px;
+            font-family: 'Cursive', sans-serif;
+            color: black;
+        }
+        .envelope::before {
+            content: "From Stan to Angie";
         }
         .flap {
             position: absolute;
@@ -41,25 +52,52 @@
             left: 0;
             width: 100%;
             height: 50%;
-            background: goldenrod;
+            background: lightgray;
             clip-path: polygon(0% 0%, 100% 0%, 50% 100%);
             transition: transform 0.5s ease-in-out;
+            transform-origin: top;
         }
         .opened .flap {
-            transform: rotateX(180deg);
+            transform: rotateX(120deg);
         }
-        .message {
+        .card {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(0);
+            width: 200px;
+            height: 150px;
+            background: pink;
+            text-align: center;
+            padding: 20px;
+            border-radius: 10px;
+            font-size: 18px;
+            font-family: 'Cursive', sans-serif;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            transition: transform 0.5s ease-in-out;
+        }
+        .opened .card {
+            transform: translate(-50%, -50%) scale(1);
+        }
+        .yes-button {
+            margin-top: 10px;
+            padding: 8px 16px;
+            font-size: 16px;
+            background: red;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .final-message {
             display: none;
-            font-size: 24px;
+            font-size: 20px;
             color: white;
             margin-top: 20px;
-        }
-        .gift-card {
-            display: none;
-            margin-top: 10px;
-            color: yellow;
-            font-size: 18px;
-            text-decoration: none;
+            font-family: 'Cursive', sans-serif;
         }
         @keyframes falling-hearts {
             0% { transform: translateY(-100px) scale(1); opacity: 1; }
@@ -80,14 +118,23 @@
             <div class="envelope"></div>
             <div class="flap"></div>
         </div>
-        <div class="message" id="message">Baby, would you be my Valentine? ❤️</div>
-        <a href="#" class="gift-card" id="gift-card" target="_blank">Click here for your gift card 💳</a>
+        <div class="card" id="card">
+            Baby girl, would you please be my Valentine? ❤️
+            <button class="yes-button" onclick="showGift()">Yes</button>
+        </div>
+        <div class="final-message" id="final-message">
+            Get something nice and sexy 😉
+            <br>
+            <a href="#" class="gift-card" id="gift-card" target="_blank">Click here for your gift card 💳</a>
+        </div>
     </div>
     <script>
         function openEnvelope() {
             document.querySelector('.envelope-container').classList.add('opened');
-            document.getElementById('message').style.display = 'block';
-            document.getElementById('gift-card').style.display = 'block';
+            document.getElementById('card').classList.add('opened');
+        }
+        function showGift() {
+            document.getElementById('final-message').style.display = 'block';
         }
         function createHearts() {
             let hearts = document.querySelectorAll('.heart');
